#
# Copyright 2022 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "regex-aot"
version = "0.1.0"
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2024"
license = "AGPL-3.0-only"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
regex-automata = { version = "0.4.13", default-features = false, features = ["dfa", "perf", "std", "syntax"] }
syn = "2.0.114"
